Use TabFragment to hold the tab fragment and text and use it in the view pager adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Stopwatch Timer</string>
+    <string name="stopwatch_tab_text">Stopwatch</string>
+    <string name="timer_tab_text">Timer</string>
 </resources>
