Start a 30 sec countdown timer when click start button and update the timer text with th count and show a toast message when the countdown is finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Stopwatch Timer</string>
     <string name="stopwatch_tab_text">Stopwatch</string>
     <string name="timer_tab_text">Timer</string>
+    <string name="start">Start</string>
+    <string name="cancel">Cancel</string>
+    <string name="_00_00_00">00:00:00</string>
 </resources>
