Add Pause/Resume functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="timer_tab_text">Timer</string>
     <string name="start">Start</string>
     <string name="cancel">Cancel</string>
+    <string name="pause">Pause</string>
+    <string name="resume">Resume</string>
     <string name="_00_00_00">00:00:00</string>
 </resources>
